# SHT3x-MicroPython

./: .gitignore  README.md  machine.py  micropython.py  package.json  pyproject.toml  run_tests.py  sht3x.mpy
.github/workflows/: build.yml
src/: main.py  sht3x.py
tests/: run_tests.py  test_sht3x.py
tests/mock/: machine.py
